Supported saving words offline

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,10 @@
 	        android:id="@android:id/list"
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent" />
+		<ListView
+			android:id="@+id/second_list_view"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent" />
 	
 	    <WebView
 	        android:id="@+id/webView1"
