--- a/app/src/main/res/layout/mean_sent_syn.xml
+++ b/app/src/main/res/layout/mean_sent_syn.xml
@@ -18,12 +18,17 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:singleLine="true"
-            android:layout_alignParentStart="true"
 	        android:layout_alignParentLeft="true"
 	        android:text="@string/desc"
 	        android:textSize="15sp" />
 	    
-
+	    <Button
+	        android:id="@+id/add_button"
+	        android:layout_width="20dp"
+            android:layout_height="20dp"
+	        android:layout_alignParentRight="true"
+	        android:background="@drawable/add_button"/>
+	
 	</RelativeLayout>
 
     <TextView
@@ -37,8 +42,7 @@
         android:id="@+id/sentence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-		android:layout_marginStart="5dp"
-		android:layout_marginLeft="5dp"
+        android:layout_marginLeft="5dp"
         android:text="@string/desc"
         android:textColor="@color/teal"
         android:textSize="15sp" />
