--- a/app/src/main/res/layout/mean_sent_syn_ant_local.xml
+++ b/app/src/main/res/layout/mean_sent_syn_ant_local.xml
@@ -29,6 +29,19 @@
 			android:textSize="18sp" />
 
 		<TextView
+			android:id="@+id/local_pronunciation"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:singleLine="true"
+			android:layout_marginStart="5dp"
+			android:layout_marginLeft="5dp"
+			android:layout_marginRight="5dp"
+			android:layout_marginEnd="5dp"
+			android:textColor="@color/teal"
+			android:text="@string/desc"
+			android:textSize="16sp" />
+
+		<TextView
 			android:id="@+id/local_pos"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
