--- a/app/src/main/res/layout/the_word.xml
+++ b/app/src/main/res/layout/the_word.xml
@@ -15,6 +15,17 @@
         android:textColor="@color/greenishblue"
         android:text="@string/desc"
         android:textSize="25sp" />
+
+	<TextView
+		android:id="@+id/pronunciation"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:singleLine="true"
+		android:layout_marginStart="10dp"
+		android:layout_marginLeft="10dp"
+		android:textColor="@color/teal"
+		android:text="@string/desc"
+		android:textSize="18sp" />
     
     <Button
 	        android:id="@+id/speak_button"
@@ -23,15 +34,7 @@
 			android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
 	        android:background="@drawable/speaker_icon"/>
-    
-    <!-- <TextView
-        android:id="@+id/pronunciation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:text="@string/desc"
-        android:textSize="15sp" /> -->
+
 	<!-- 
     <MediaController
         android:id="@+id/mediaController1"
