--- a/app/src/main/res/layout/mean_syn.xml
+++ b/app/src/main/res/layout/mean_syn.xml
@@ -36,14 +36,31 @@
         android:layout_height="wrap_content"
         android:text="@string/desc"
         android:textSize="15sp" />
-    
-    
-    <TextView
-        android:id="@+id/synonyms"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/desc"
-        android:textColor="@color/lightblue"
-        android:textSize="15sp" />
+
+
+	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+		<TextView
+			android:id="@+id/synonym_word"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="5dp"
+			android:layout_marginStart="5dp"
+			android:layout_marginRight="5dp"
+			android:layout_marginEnd="5dp"
+			android:text="@string/similar_word"
+			android:textColor="@color/lightblue"
+			android:textStyle="bold"
+			android:textSize="15sp" />
+		<TextView
+			android:id="@+id/synonyms"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/desc"
+			android:textColor="@color/lightblue"
+			android:textSize="15sp" />
+	</LinearLayout>
     
 </LinearLayout>
