--- a/app/src/main/res/layout/mean_syn_ant.xml
+++ b/app/src/main/res/layout/mean_syn_ant.xml
@@ -18,6 +18,7 @@
 	        android:layout_height="wrap_content"
 	        android:singleLine="true"
 	        android:layout_alignParentLeft="true"
+			android:layout_alignParentStart="true"
 	        android:text="@string/desc"
 	        android:textSize="15sp" />
 	    
@@ -26,6 +27,7 @@
 	        android:layout_width="20dp"
             android:layout_height="20dp"
 	        android:layout_alignParentRight="true"
+			android:layout_alignParentEnd="true"
 	        android:background="@drawable/add_button"/>
 	
 	</RelativeLayout>
@@ -36,22 +38,56 @@
         android:layout_height="wrap_content"
         android:text="@string/desc"
         android:textSize="15sp" />
-    
-    
-    <TextView
-        android:id="@+id/synonyms"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/desc"
-        android:textColor="@color/lightblue"
-        android:textSize="15sp" />
-    
-    <TextView
-        android:id="@+id/antonyms"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/desc"
-        android:textColor="@color/lightred"
-        android:textSize="15sp" />
+
+
+	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+		<TextView
+			android:id="@+id/synonym_word"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="5dp"
+			android:layout_marginStart="5dp"
+			android:layout_marginRight="5dp"
+			android:layout_marginEnd="5dp"
+			android:text="@string/similar_word"
+			android:textColor="@color/lightblue"
+			android:textStyle="bold"
+			android:textSize="15sp" />
+		<TextView
+			android:id="@+id/synonyms"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/desc"
+			android:textColor="@color/lightblue"
+			android:textSize="15sp" />
+	</LinearLayout>
+
+	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+		<TextView
+			android:id="@+id/antonym_word"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="5dp"
+			android:layout_marginStart="5dp"
+			android:layout_marginRight="5dp"
+			android:layout_marginEnd="5dp"
+			android:text="@string/opposite_word"
+			android:textColor="@color/lightred"
+			android:textStyle="bold"
+			android:textSize="15sp" />
+		<TextView
+			android:id="@+id/antonyms"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/desc"
+			android:textColor="@color/lightred"
+			android:textSize="15sp" />
+	</LinearLayout>
     
 </LinearLayout>
